# do4ds_project

./: .gitignore  00_data.qmd  01_eda.qmd  02_model.qmd  02_model_R.qmd  Makefile  README.md  README.qmd  _quarto.yml  api.R  api.py  app.R  data.qmd  eda.qmd  index.qmd  main.py  model.qmd  package.json  pyproject.toml  requirements.txt
