[project]
name = "do4ds-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.23.8",
    "botocore==1.26.8",
    "duckdb==0.10.2",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-restful==0.3.10",
    "ipykernel==6.29.4",
    "ipython==8.18.1",
    "ipywidgets==8.1.2",
    "jinja2==3.1.2",
    "jmespath==1.0.1",
    "json5==0.9.24",
    "jsonpointer==2.4",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter==1.0.0",
    "jupyter-client==8.6.1",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.1.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.26.0",
    "jupyterlab-widgets==3.0.10",
    "matplotlib==3.8.4",
    "matplotlib-inline==0.1.6",
    "notebook==7.1.2",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "palmerpenguins==0.1.4",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "protobuf==4.23.4",
    "psutil==5.9.8",
    "psycopg==3.1.12",
    "psycopg-binary==3.1.12",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "requests-toolbelt==1.0.0",
    "robot==20071211",
    "robotframework==6.1.1",
    "robotframework-extendedrequestslibrary==0.5.5",
    "robotframework-requests==0.9.5",
    "rsconnect-python==1.23.0",
    "s3transfer==0.5.2",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
]
